--- a/package.json
+++ b/package.json
@@ -9,9 +9,12 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^6.2.1",
+    "@fortawesome/free-regular-svg-icons": "^6.2.1",
+    "@fortawesome/free-solid-svg-icons": "^6.2.1",
+    "@fortawesome/vue-fontawesome": "^3.0.3",
     "axios": "^1.2.4",
     "bootstrap": "^5.3.0-alpha1",
-    "bootstrap-icons": "^1.10.3",
     "vue": "^3.2.45"
   },
   "devDependencies": {
